fix: cor da scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,25 @@ body {
   font-family: "Sora", serif;
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #128385;
+  border-radius: 6px;
+  transition: background-color 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #0f6b71;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+
 button {
   transition: 0.3s ease-in-out;
 }
